--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Especialidades.Designer.cs">
       <DependentUpon>Especialidades.cs</DependentUpon>
     </Compile>
+    <Compile Include="EstadoAcademico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EstadoAcademico.Designer.cs">
+      <DependentUpon>EstadoAcademico.cs</DependentUpon>
+    </Compile>
     <Compile Include="InscripcionCursado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +126,12 @@
     </Compile>
     <Compile Include="Planes.Designer.cs">
       <DependentUpon>Planes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PlanEstudio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlanEstudio.Designer.cs">
+      <DependentUpon>PlanEstudio.cs</DependentUpon>
     </Compile>
     <Compile Include="PlanMaterias.cs">
       <SubType>Form</SubType>
@@ -159,6 +171,9 @@
     <EmbeddedResource Include="Especialidades.resx">
       <DependentUpon>Especialidades.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EstadoAcademico.resx">
+      <DependentUpon>EstadoAcademico.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InscripcionCursado.resx">
       <DependentUpon>InscripcionCursado.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Planes.resx">
       <DependentUpon>Planes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlanEstudio.resx">
+      <DependentUpon>PlanEstudio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlanMaterias.resx">
       <DependentUpon>PlanMaterias.cs</DependentUpon>
