--- a/Business.Logic/Business.Logic.csproj
+++ b/Business.Logic/Business.Logic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ComisionLogic.cs" />
     <Compile Include="CursoLogic.cs" />
     <Compile Include="EspecialidadLogic.cs" />
+    <Compile Include="InscripcionLogic.cs" />
     <Compile Include="MateriaLogic.cs" />
     <Compile Include="PlanLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
