--- a/Business.Logic/Business.Logic.csproj
+++ b/Business.Logic/Business.Logic.csproj
@@ -42,6 +42,7 @@
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="ComisionLogic.cs" />
     <Compile Include="CursoLogic.cs" />
+    <Compile Include="DocenteCursoLogic.cs" />
     <Compile Include="EspecialidadLogic.cs" />
     <Compile Include="InscripcionLogic.cs" />
     <Compile Include="MateriaLogic.cs" />
