--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -55,6 +55,18 @@
     <Compile Include="ApplicationForm.Designer.cs">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AsignacionDocenteCurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AsignacionDocenteCurso.Designer.cs">
+      <DependentUpon>AsignacionDocenteCurso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AsignacionDocenteDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AsignacionDocenteDesktop.Designer.cs">
+      <DependentUpon>AsignacionDocenteDesktop.cs</DependentUpon>
+    </Compile>
     <Compile Include="CambiarContraseña.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +84,12 @@
     </Compile>
     <Compile Include="CursosComisiones.Designer.cs">
       <DependentUpon>CursosComisiones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CursosDocente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CursosDocente.Designer.cs">
+      <DependentUpon>CursosDocente.cs</DependentUpon>
     </Compile>
     <Compile Include="EspecialidadDesktop.cs">
       <SubType>Form</SubType>
@@ -156,6 +174,12 @@
     <EmbeddedResource Include="ApplicationForm.resx">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AsignacionDocenteCurso.resx">
+      <DependentUpon>AsignacionDocenteCurso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AsignacionDocenteDesktop.resx">
+      <DependentUpon>AsignacionDocenteDesktop.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CambiarContraseña.resx">
       <DependentUpon>CambiarContraseña.cs</DependentUpon>
     </EmbeddedResource>
@@ -164,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CursosComisiones.resx">
       <DependentUpon>CursosComisiones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CursosDocente.resx">
+      <DependentUpon>CursosDocente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EspecialidadDesktop.resx">
       <DependentUpon>EspecialidadDesktop.cs</DependentUpon>
