--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Comisiones.Designer.cs">
       <DependentUpon>Comisiones.cs</DependentUpon>
     </Compile>
+    <Compile Include="CursoAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CursoAdd.Designer.cs">
+      <DependentUpon>CursoAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="CursosComisiones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Comisiones.resx">
       <DependentUpon>Comisiones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CursoAdd.resx">
+      <DependentUpon>CursoAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CursosComisiones.resx">
       <DependentUpon>CursosComisiones.cs</DependentUpon>
